[gd_scene load_steps=2 format=3 uid="uid://ctspyv8ge6exa"]

[ext_resource type="Script" uid="uid://3pnb21hdfwdq" path="res://components/shop card item/shop_card_item.gd" id="1_dio12"]

[node name="ShopCardItem" type="VBoxContainer"]
custom_minimum_size = Vector2(70, 100)
offset_right = 70.0
offset_bottom = 90.0
size_flags_horizontal = 3
theme_override_constants/separation = 6
alignment = 1
script = ExtResource("1_dio12")

[node name="CardArt" type="TextureRect" parent="."]
custom_minimum_size = Vector2(50, 90)
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="CardName" type="Label" parent="."]
custom_minimum_size = Vector2(70, 10)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Card Name"
horizontal_alignment = 1

[node name="CostLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Cost"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuyButton" type="Button" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Buy"
